--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
         
         footer{
-            background-color: forestgreen;
+            background-color: #FA26A0;
             padding: 10px;
             height: 50px;
             clear: both;
@@ -91,7 +91,7 @@
         p{
            text-align: justify;
            font-size: 1vw;
-           padding: 10px;
+           padding: 20px;
         }
 
         ul{
@@ -116,7 +116,7 @@
             <div class="col-sm-4" id="links">
                 <ul class="nav">
                     <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="/Jomarin/form.html" class="nav-link">Form</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
                 </ul>       
             </div>
@@ -142,9 +142,9 @@
 
                 Clash of Clans was developed by Supercell, the company behind other popular mobile games like Hay Day.[30] The game took six months to develop with the gameplay changing little over the course of development.[31] According to Supercell's Lasse Louhento the development team encountered no major hurdles during this time.[31] Inspiration for the game included the games Backyard Monsters and Travian with the art style being influenced by old Super NES and arcade games.[31] Initially the art style was more cartoon based but this was changed as the team worried it would alienate the more hardcore segment of their audience.[32] Throughout most of development the game was multiplayer-only focused however after focus testing, Supercell went back and added a single-player mode.[31] The game was released for iOS platforms on August 2, 2012,[1] and on Google Play for Android on October 7, 2013.[2]<br>
 
-                In February 2015, Supercell released their Clash of Clans Super Bowl XLIX commercial, featuring Liam Neeson parodying his character from Taken.[33] On February 2, Business Insider reported the ad as the fifth most watched Super Bowl ad,[34] though on February 6, VentureBeat reported the ad was the most viewed of those that appeared on the Super Bowl.[35] YouTube users later voted the advertisement the second best Super Bowl ad, behind Nissan's "With Dad" ad.[36]
+In February 2015, Supercell released their Clash of Clans Super Bowl XLIX commercial, featuring Liam Neeson parodying his character from Taken.[33] On February 2, Business Insider reported the ad as the fifth most watched Super Bowl ad,[34] though on February 6, VentureBeat reported the ad was the most viewed of those that appeared on the Super Bowl.[35] YouTube users later voted the advertisement the second best Super Bowl ad, behind Nissan's "With Dad" ad.[36]
 
-                On September 23, 2015, Taiwanese singers JJ Lin and Jimmy Lin released the game's theme song "全面开战" ("Fight on All Fronts" in English), which was sung in Mandarin.[37]
+On September 23, 2015, Taiwanese singers JJ Lin and Jimmy Lin released the game's theme song "全面开战" ("Fight on All Fronts" in English), which was sung in Mandarin.[37]
                 </p>
             </section>
         </div>
