--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="col-sm-4" id="links">
                 <ul class="nav">
                     <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="/Jomarin/form.html" class="nav-link">Form</a></li>
+                    <li class="nav-item"><a href="/form.html" class="nav-link">Form</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
                 </ul>       
             </div>
