--- a/form.html
+++ b/form.html
@@ -122,7 +122,7 @@
 
             <div class="col-sm-4" id="links">
                 <ul class="nav">
-                    <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href='index.html' class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
                 </ul>       
