--- a/form.html
+++ b/form.html
@@ -131,9 +131,9 @@
     
         <div id="main" class="row">
             <nav class="col-sm-3">
-                <img src="images/xiao.jpg" class="img-thumbnail">
-                <img src="images/ayaka.jpg" class="img-thumbnail">
-                <img src="images/yoimiya.png" class="img-thumbnail">
+                <img src="images/BK.jpg" class="img-thumbnail">
+                <img src="images/AQ.jpg" class="img-thumbnail">
+                <img src="images/GW.jpg" class="img-thumbnail">
             </nav>
             <nav class="col-sm-6" id="form-container">
                <form>
